# booster-themes

./: Makefile.am  README.md  configure.ac
common/: Makefile.am  index.theme-hotrod  index.theme-nvidia
common/HOTROD/: index.theme
common/HOTROD/gtk-2.0/: gtkrc  xfce-notify.rc
common/HOTROD/gtk-3.0/: gtk.css
common/MILITARY/: index.theme
common/MILITARY/gnome-shell/: gnome-shell.css
common/MILITARY/gtk-2.0/: apps.rc  gtkrc  panel.rc  xfce-notify.rc
common/MILITARY/gtk-2.0/menubar-toolbar/: menubar-toolbar.rc
common/MILITARY/gtk-3.0/: gtk.css
common/NVIDIA/: index.theme
common/NVIDIA/gtk-2.0/: gtkrc  xfce-notify.rc
common/PURPLERAGE/: index.theme
common/PURPLERAGE/gnome-shell/: gnome-shell.css
common/PURPLERAGE/gtk-2.0/: gtkrc  xfce-notify.rc
common/PURPLERAGE/gtk-3.0/: gtk.css
common/cinnamon/: cinnamon-dark.css  cinnamon.css
common/gnome-shell/3.14/: gnome-shell-dark.css  gnome-shell.css
common/gnome-shell/3.16/: gnome-shell-dark.css  gnome-shell.css
common/gnome-shell/3.16/sass/: _colors.scss
common/gnome-shell/3.18/: gnome-shell-dark.css  gnome-shell.css
common/gnome-shell/3.22/: gnome-shell-dark.css  gnome-shell-hotrod.css  gnome-shell-nvidia.css  gnome-shell.css
common/gnome-shell/3.22/sass/: _colors.scss  _common.scss
common/gtk-2.0/: apps.rc  gtkrc  gtkrc-darker  panel.rc  render-assets.sh
common/gtk-2.0/menubar-toolbar/: menubar-toolbar-dark.rc  menubar-toolbar.rc
common/gtk-3.0/3.14/: gtk-dark.css  gtk-darker.css  gtk-solid-dark.css  gtk-solid-darker.css  gtk-solid.css  gtk.css
common/gtk-3.0/3.14/sass/: _applications.scss  _unity.scss
common/gtk-3.0/3.16/: gtk-dark.css  gtk-darker.css  gtk-solid-dark.css  gtk-solid-darker.css  gtk-solid.css  gtk.css
common/gtk-3.0/3.16/sass/: _applications.scss
common/gtk-3.0/3.18/: gtk-dark.css  gtk-darker.css  gtk-solid-dark.css  gtk-solid-darker.css  gtk-solid.css  gtk.css
common/gtk-3.0/3.18/sass/: _applications.scss
common/gtk-3.0/3.20/: gtk-dark.css  gtk-darker.css  gtk-solid-dark.css  gtk-solid-darker.css  gtk-solid.css  gtk.css
common/gtk-3.0/3.20/sass/: _applications.scss  _unity.scss
common/gtk-3.0/3.22/: assets.txt  gtk-dark.css  gtk-darker.css  gtk-solid-dark.css  gtk-solid-darker.css  gtk-solid.css  gtk.css  render-assets.sh
common/metacity-1/: metacity-theme-1.xml  metacity-theme-2-dark.xml  metacity-theme-3.xml
common/xfwm4/: themerc
m4/: booster-enable.m4  booster-gnome.m4
